--- a/power_control/predictor/models/config.json
+++ b/power_control/predictor/models/config.json
@@ -1,11 +1,15 @@
 {
     "epochs": 100,
-    "batch_size": 32,
+    "batch_size": 128,
     "learning_rate": 0.001,
-    "early_stopping_patience": 10,
+    "min_lr": 1e-06,
+    "lr_patience": 5,
+    "lr_factor": 0.5,
+    "early_stopping_patience": 15,
     "lookback_minutes": 240,
     "forecast_minutes": 30,
     "model_dir": "/home/hyq/green-energy/power_control/predictor/models",
     "data_path": "/home/hyq/green-energy/power_control/predictor/data/training_data_20250120_190101.csv",
-    "log_dir": "/home/hyq/green-energy/power_control/predictor/logs"
+    "log_dir": "/home/hyq/green-energy/power_control/predictor/logs",
+    "grad_clip": 1.0
 }
