--- a/power_control/predictor/models/config.json
+++ b/power_control/predictor/models/config.json
@@ -6,6 +6,9 @@
     "lr_patience": 5,
     "lr_factor": 0.5,
     "early_stopping_patience": 15,
+    "weight_decay": 0.0001,
+    "gradient_clip": 1.0,
+    "warmup_epochs": 5,
     "lookback_minutes": 240,
     "forecast_minutes": 30,
     "model_dir": "/home/hyq/green-energy/power_control/predictor/models",
